# generated/openapi.json
@@ -251,7 +251,8 @@
             "default": "mock",
             "enum": [
               "mock",
-              "khommo-readonly"
+              "khommo-readonly",
+              "vietshare-readonly"
             ],
             "title": "Mode",
             "type": "string"
@@ -275,7 +276,8 @@
             "default": "mock",
             "enum": [
               "mock",
-              "khommo"
+              "khommo",
+              "vietshare"
             ],
             "title": "Supplier",
             "type": "string"
@@ -334,7 +336,8 @@
           "mode": {
             "enum": [
               "mock",
-              "khommo-readonly"
+              "khommo-readonly",
+              "vietshare-readonly"
             ],
             "title": "Mode",
             "type": "string"
@@ -363,7 +366,8 @@
             "default": "mock",
             "enum": [
               "mock",
-              "khommo"
+              "khommo",
+              "vietshare"
             ],
             "title": "Supplier",
             "type": "string"
